[tool.poetry]
name = "dash-project"
version = "0.1.0"
description = ""
authors = ["TFP <thefoxpaw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
dash = "^2.6.2"
dash-bootstrap-components = "^1.2.1"
googlemaps = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
